--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>Coleman James Pushlar</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<p>UCONN EEB Biodiversity and Conservation Biology Bs/Ms <a href="https://eeb.uconn.edu/masterbiodiversity/">Program Website</a></p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="#first" class="button scrolly">Curriculum vitae</a>
 				</footer>
 			</section>
 
