--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>Coleman James Pushlar</h1>
-					<p>UCONN EEB Biodiversity and Conservation Biology Bs/Ms <a href="https://eeb.uconn.edu/masterbiodiversity/">Program Website</a></p>
+					<p>UCONN EEB Biodiversity and Conservation Biology Bs/Ms <a href="file:///C:/Users/cpush/Downloads/Coleman%20Resume%20PDF.pdf">CV</a></p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Curriculum vitae</a>
+					<a href="#first" class="button scrolly">What Have I Been Up To?</a>
 				</footer>
 			</section>
 
