--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>Coleman James Pushlar</h1>
-					<p>UCONN EEB Biodiversity and Conservation Biology Bs/Ms <a href="file:///C:/Users/cpush/Downloads/Coleman%20Resume%20PDF.pdf">CV</a></p>
+					<p>UCONN EEB Biodiversity and Conservation Biology B.S/M.S <a href="file:///C:/Users/cpush/Downloads/Coleman%20Resume.pdf">CV</a></p>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">What Have I Been Up To?</a>
