--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>Coleman James Pushlar</h1>
-					<p>UCONN EEB Biodiversity and Conservation Biology B.S/M.S <a href="https://uconn-my.sharepoint.com/:w:/g/personal/cop18009_uconn_edu/EXQDvspR83xHkMD5mnxFQDwBYFk4FWd99G30-4aNZ6kzAg?e=RKSbSx">CV</a></p>
+					<p>UCONN EEB Biodiversity and Conservation Biology B.S/M.S <a href="https://uconn-my.sharepoint.com/:w:/g/personal/cop18009_uconn_edu/EXQDvspR83xHkMD5mnxFQDwBYFk4FWd99G30-4aNZ6kzAg?e=RKSbSx">-CV-</a></p>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">What Have I Been Up To?</a>
