--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
+						<h2>More About Coleman Pushlar</h2>
 						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						feugiat. Contact Information: cop18009@uconn.edu<Lab: Dr.Bagchi < Gant:W403</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
