--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<div class="container">
 						<h2>More About Coleman Pushlar</h2>
 						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Contact Information: cop18009@uconn.edu<Lab: Dr.Bagchi < Gant:W403</p>
+						Contact Information: Email:cop18009@uconn.edu Lab:Dr.Bagchi GantW403</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
