--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<header>
 					<div class="container">
 						<h2>More About Coleman Pushlar</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
+						<p>Hello, My intrests include plant and insect identification, hiking, invasive plant removal and conservation outreach<br />
 						Contact Information: Email:cop18009@uconn.edu Lab:Dr.Bagchi GantW403</p>
 					</div>
 				</header>
