--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<header>
 					<div class="container">
 						<h2>More About Coleman Pushlar</h2>
-						<p>Hello, My intrests include plant and insect identification, hiking, invasive plant removal and conservation outreach<br />
-						Contact Information: Email:cop18009@uconn.edu Lab:Dr.Bagchi GantW403</p>
+						<p>Hello! My passions include plant and insect identification, hiking, invasive plant removal, and engaging in conservation outreach<br />
+						Contact Information: Email:cop18009@uconn.edu<br />Lab:Dr.Bagchi GantW403</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
