--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 					<div class="container">
 						<h2>More About Coleman Pushlar</h2>
 						<p>Hello! My passions include plant and insect identification, hiking, invasive plant removal, and engaging in conservation outreach<br />
-						Contact Information: Email:cop18009@uconn.edu<br />Lab:Dr.Bagchi GantW403</p>
+						Contact Information: Email:cop18009@uconn.edu<br />Lab:Dr.Bagchi GantW403<br />Department of Ecology and Evolutionary Biology<br /> 
+University of Connecticut Storrs, CT 06269-3043 U.S.A.</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
