--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ University of Connecticut Storrs, CT 06269-3043 U.S.A.</p>
 									accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
 									euismod lorem ipsum dolor.</p>
 									<footer>
-										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
+										<a href="https://uconn-my.sharepoint.com/:w:/g/personal/cop18009_uconn_edu/EXQDvspR83xHkMD5mnxFQDwBh3dLLYupttJ1Yq3NQzNFvw?e=VFDUjV">-CV-</a></a>
 									</footer>
 								</section>
 							</div>
